# ros2mait

./: README.md  config.ini
Non_Workspace_Items/: testcode_moveitservo.py  topleft.txt
Non_Workspace_Items/ControlUI/: maincontrol.py
Non_Workspace_Items/Gripper_MZP45/: MPZ45_gripper_base.STL  MPZ45_tooth.STL  mpz45_gripper_base.dae  mpz45_tooth.dae  readme.md  stift.STL  stift.dae
Non_Workspace_Items/TTF_to_SVG/: ttf_to_svg.py
Non_Workspace_Items/UI/: config.ini  config2.ini  main.py
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.6
install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.6
install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.6  libmoveit_butterworth_filter.so.2.5.6  libmoveit_collision_detection.so.2.5.6  libmoveit_collision_detection_bullet.so.2.5.6  libmoveit_collision_detection_fcl.so.2.5.6  libmoveit_collision_distance_field.so.2.5.6  libmoveit_constraint_samplers.so.2.5.6  libmoveit_distance_field.so.2.5.6  libmoveit_dynamics_solver.so.2.5.6  libmoveit_exceptions.so.2.5.6  libmoveit_kinematic_constraints.so.2.5.6  libmoveit_kinematics_metrics.so.2.5.6  (+9 more)
log/: latest_build
src/gui_subscriber/: setup.cfg  setup.py
src/letter_writer/: CMakeLists.txt
src/letter_writer/src/: letter_input_node.cpp
src/path_tracer_plugin/: CMakeLists.txt
src/robot_letter_writer/: package.xml  setup.cfg  setup.py
src/robot_state/: package.xml  setup.py
src/testV1/: setup.cfg  setup.py
src/testV2/: CMakeLists.txt
(+2551 files in other folders)
